--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Roboto Condensed', sans-serif;
+    background-color: #dcedc8;
 }
 
 #app {
@@ -8,25 +9,86 @@ body {
     align-items: center;
 }
 
-/*.btn-block {*/
-/*    border-radius: 50%;*/
-/*    height: 60px;*/
-/*    width: 60px;*/
-/*    font-size: 58px;*/
-/*    outline: none;*/
-/*    text-align: center;*/
-/*    display: flex;*/
-/*    justify-content: center;*/
-/*    align-items: center;*/
-/*    color: grey;*/
-/*    border: 2px solid grey;*/
-/*}*/
+header {
+    width: 100%;
+    height: 220px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    margin-bottom: 6px;
+    border-bottom: 1px solid #aed581;
+    position: fixed;
+    top: 0;
+}
 
-/*.btn-block:active {*/
-/*    border: 2px solid forestgreen;*/
-/*    color: black;*/
-/*    background-color: lightgoldenrodyellow;*/
-/*}*/
+.clr-block {
+    height: 220px;
+    width: 100%;
+}
+
+.empty-plan{
+    color: red;
+    font-size: 20px;
+    padding-left: 20px;
+}
+
+.window {
+    height: 110px;
+    width: 166px;
+    position: fixed;
+    top: 186px;
+    background-color: white;
+    border: 4px solid green;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.fa-check-square {
+    color: forestgreen;
+    font-size: 35px;
+}
+
+input {
+    width: 80px;
+    height: 44px;
+    font-size: 30px;
+}
+
+input::-webkit-inner-spin-button {
+    display: none;
+}
+
+button {
+    border-radius: 50%;
+    height: 60px;
+    width: 60px;
+    font-size: 58px;
+    outline: none;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: grey;
+    border: 2px solid grey;
+}
+
+button:active {
+    border: 2px solid forestgreen;
+    color: black;
+    background-color: lightgoldenrodyellow;
+}
+
+.active-circle:active {
+    border: 2px solid forestgreen;
+    color: black;
+    background-color: lightgoldenrodyellow;
+}
 
 .label {
     background-color: forestgreen;
@@ -50,6 +112,7 @@ body {
     margin-bottom: 4px;
     padding-top: 6px;
     padding-bottom: 6px;
+    background-color: white;
 }
 
 .block-for-stat {
@@ -68,6 +131,7 @@ body {
     justify-content: center;
     align-items: center;
     font-size: 46px;
+    background-color: white;
 }
 
 .block-for-title {
