--- a/styles/style.css
+++ b/styles/style.css
@@ -364,3 +364,29 @@ body {
     }
 
 }
+
+.signature{
+    height: 25px;
+    width: 100%;
+    background-color: #fff176;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+.my-signature{
+    width: 260px;
+    display: flex;
+    justify-content: space-between;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.v-info{
+    font-size: 14px;
+    color: red;
+}
+
+.dev-info{
+    font-size: 11px;
+}
