--- a/styles/style.css
+++ b/styles/style.css
@@ -79,6 +79,7 @@ body {
         align-items: center;
         color: grey;
         border: 2px solid grey;
+        -webkit-appearance: none;
     }
 
     button:active {
@@ -194,7 +195,7 @@ body {
 
     header {
         width: 100%;
-        height: 220px;
+        height: 120px;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -207,14 +208,13 @@ body {
     }
 
     .clr-block {
-        height: 220px;
+        height: 120px;
         width: 100%;
     }
 
     .empty-plan {
         color: red;
-        font-size: 20px;
-        padding-left: 20px;
+        font-size: 11px;
     }
 
     .window {
@@ -260,6 +260,7 @@ body {
         align-items: center;
         color: grey;
         border: 2px solid grey;
+        -webkit-appearance: none;
     }
 
     button:active {
@@ -312,14 +313,14 @@ body {
     }
 
     .circle {
-        border-radius: 50%;
-        border: 4px solid darkgreen;
+        border-radius: 20px;
+        border: 2px solid darkgreen;
         width: 110px;
-        height: 110px;
+        height: 45px;
         display: flex;
         justify-content: center;
         align-items: center;
-        font-size: 46px;
+        font-size: 30px;
         background-color: white;
     }
 
