--- a/styles/style.css
+++ b/styles/style.css
@@ -3,187 +3,6 @@ body {
     background-color: #dcedc8;
 }
 
-@media (min-width: 330px) {
-
-    #app {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
-    }
-
-    header {
-        width: 100%;
-        height: 230px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        background-color: white;
-        margin-bottom: 6px;
-        border-bottom: 1px solid #aed581;
-        position: fixed;
-        top: 0;
-        z-index: 1;
-    }
-
-    .clr-block {
-        height: 230px;
-        width: 100%;
-    }
-
-    .empty-plan {
-        color: red;
-        font-size: 20px;
-        padding-left: 20px;
-    }
-
-    .window {
-        height: 110px;
-        width: 166px;
-        position: fixed;
-        top: 186px;
-        background-color: white;
-        border: 4px solid green;
-        border-radius: 8px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-around;
-        padding-top: 5px;
-        padding-bottom: 5px;
-    }
-
-    .fa-check-square {
-        color: forestgreen;
-        font-size: 35px;
-    }
-
-    input {
-        width: 80px;
-        height: 44px;
-        font-size: 30px;
-    }
-
-    input::-webkit-inner-spin-button {
-        display: none;
-    }
-
-    button {
-        border-radius: 30px;
-        height: 50px;
-        width: 60px;
-        font-size: 54px;
-        outline: none;
-        text-align: center;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        color: grey;
-        border: 2px solid grey;
-    }
-
-    button:active {
-        border: 2px solid forestgreen;
-        color: black;
-        background-color: lightgoldenrodyellow;
-    }
-
-    .active-circle:active {
-        border: 2px solid forestgreen;
-        color: black;
-        background-color: lightgoldenrodyellow;
-    }
-
-    .label {
-        background-color: forestgreen;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 60px;
-        width: 100%;
-        margin-bottom: 6px;
-    }
-
-    .label-text {
-        color: white;
-        font-size: 30px;
-    }
-
-    .block-for-product {
-        width: 150px;
-        height: 210px;
-        border: 2px solid green;
-        border-radius: 8px;
-        margin-bottom: 12px;
-        padding-left: 10px;
-        padding-bottom: 10px;
-        padding-top: 4px;
-        background-color: white;
-        display: flex;
-        justify-content: flex-end;
-        flex-direction: column;
-    }
-
-    .block-for-stat {
-        display: flex;
-        justify-content: space-between;
-        width: 260px;
-        margin-bottom: 6px;
-    }
-
-    .circle {
-        border-radius: 50%;
-        border: 4px solid darkgreen;
-        width: 110px;
-        height: 110px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-size: 46px;
-        background-color: white;
-    }
-
-    .block-for-title {
-        display: flex;
-        padding-top: 10px;
-        padding-left: 20px;
-        width: 138px;
-        position: relative;
-    }
-
-    .titles {
-        display: flex;
-        justify-content: space-between;
-        width: 230px;
-        margin-bottom: 6px;
-    }
-
-    .block-for-btn {
-        display: flex;
-        justify-content: space-between;
-        width: 138px;
-    }
-
-    .price {
-        position: absolute;
-        right: 16px;
-        top: 10px;
-        font-size: 20px;
-        color: darkgrey;
-    }
-
-    .name {
-        font-size: 22px;
-        align-self: flex-start;
-        width: 138px;
-        height: 50px;
-    }
-
-    .num {
-        font-size: 83px;
-    }
-
-}
-
 @media (max-width: 328px) {
 
     #app {
@@ -192,9 +11,15 @@ body {
         justify-content: space-around;
     }
 
+    .container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+
     header {
         width: 100%;
-        height: 120px;
+        height: 96px;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -207,7 +32,7 @@ body {
     }
 
     .clr-block {
-        height: 120px;
+        height: 96px;
         width: 100%;
     }
 
@@ -278,14 +103,9 @@ body {
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 60px;
+        height: 6px;
         width: 100%;
         margin-bottom: 6px;
-    }
-
-    .label-text {
-        color: white;
-        font-size: 30px;
     }
 
     .block-for-product {
@@ -362,30 +182,433 @@ body {
         font-size: 80px;
     }
 
+    .signature {
+        height: 25px;
+        width: 100%;
+        background-color: #fff176;
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+    }
+
+    .my-signature {
+        width: 260px;
+        display: flex;
+        justify-content: space-between;
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+
+    .v-info {
+        font-size: 14px;
+        color: red;
+    }
+
+    .dev-info {
+        font-size: 11px;
+    }
+
 }
 
-.signature{
-    height: 25px;
-    width: 100%;
-    background-color: #fff176;
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
+@media (min-width: 329px) {
+
+    #app {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+
+    .container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+
+    header {
+        width: 100%;
+        height: 164px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: red;
+        margin-bottom: 6px;
+        border-bottom: 1px solid #aed581;
+        position: fixed;
+        top: 0;
+        z-index: 1;
+    }
+
+    .clr-block {
+        height: 164px;
+        width: 100%;
+    }
+
+    .empty-plan {
+        color: red;
+        font-size: 20px;
+        padding-left: 20px;
+    }
+
+    .window {
+        height: 110px;
+        width: 166px;
+        position: fixed;
+        top: 186px;
+        background-color: white;
+        border: 4px solid green;
+        border-radius: 8px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+
+    .fa-check-square {
+        color: forestgreen;
+        font-size: 35px;
+    }
+
+    input {
+        width: 80px;
+        height: 44px;
+        font-size: 30px;
+    }
+
+    input::-webkit-inner-spin-button {
+        display: none;
+    }
+
+    button {
+        border-radius: 30px;
+        height: 50px;
+        width: 60px;
+        font-size: 54px;
+        outline: none;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: grey;
+        border: 2px solid grey;
+    }
+
+    button:active {
+        border: 2px solid forestgreen;
+        color: black;
+        background-color: lightgoldenrodyellow;
+    }
+
+    .active-circle:active {
+        border: 2px solid forestgreen;
+        color: black;
+        background-color: lightgoldenrodyellow;
+    }
+
+    .label {
+        background-color: forestgreen;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 6px;
+        width: 100%;
+        margin-bottom: 6px;
+    }
+
+    .block-for-product {
+        width: 150px;
+        height: 210px;
+        border: 2px solid green;
+        border-radius: 8px;
+        margin-bottom: 12px;
+        padding-left: 10px;
+        padding-bottom: 10px;
+        padding-top: 4px;
+        background-color: white;
+        display: flex;
+        justify-content: flex-end;
+        flex-direction: column;
+    }
+
+    .block-for-stat {
+        display: flex;
+        justify-content: space-between;
+        width: 260px;
+        margin-bottom: 6px;
+    }
+
+    .circle {
+        border-radius: 50%;
+        border: 4px solid darkgreen;
+        width: 110px;
+        height: 110px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 46px;
+        background-color: white;
+    }
+
+    .block-for-title {
+        display: flex;
+        padding-top: 10px;
+        padding-left: 20px;
+        width: 138px;
+        position: relative;
+    }
+
+    .titles {
+        display: flex;
+        justify-content: space-between;
+        width: 230px;
+        margin-bottom: 6px;
+    }
+
+    .block-for-btn {
+        display: flex;
+        justify-content: space-between;
+        width: 138px;
+    }
+
+    .price {
+        position: absolute;
+        right: 16px;
+        top: 10px;
+        font-size: 20px;
+        color: darkgrey;
+    }
+
+    .name {
+        font-size: 22px;
+        align-self: flex-start;
+        width: 138px;
+        height: 50px;
+    }
+
+    .num {
+        font-size: 83px;
+    }
+
+    .signature {
+        height: 25px;
+        width: 100%;
+        background-color: #fff176;
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+    }
+
+    .my-signature {
+        width: 260px;
+        display: flex;
+        justify-content: space-between;
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+
+    .v-info {
+        font-size: 14px;
+        color: red;
+    }
+
+    .dev-info {
+        font-size: 11px;
+    }
+
 }
 
-.my-signature{
-    width: 260px;
-    display: flex;
-    justify-content: space-between;
-    padding-left: 5px;
-    padding-right: 5px;
-}
+@media (min-width: 600px) {
 
-.v-info{
-    font-size: 14px;
-    color: red;
-}
+    #app {
+        display: flex;
+    }
 
-.dev-info{
-    font-size: 11px;
+    .container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+    }
+
+    header {
+        width: 120px;
+        height: 100%;
+        background-color: darkgrey;
+        position: fixed;
+        left: 0;
+        z-index: 1;
+    }
+
+    .clr-block {
+        width: 120px;
+        height: 100%;
+    }
+
+    .empty-plan {
+        color: red;
+        font-size: 20px;
+        padding-left: 20px;
+    }
+
+    .window {
+        height: 110px;
+        width: 166px;
+        position: fixed;
+        top: 186px;
+        background-color: white;
+        border: 4px solid green;
+        border-radius: 8px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+
+    .fa-check-square {
+        color: forestgreen;
+        font-size: 35px;
+    }
+
+    input {
+        width: 80px;
+        height: 44px;
+        font-size: 30px;
+    }
+
+    input::-webkit-inner-spin-button {
+        display: none;
+    }
+
+    button {
+        border-radius: 30px;
+        height: 50px;
+        width: 60px;
+        font-size: 54px;
+        outline: none;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: grey;
+        border: 2px solid grey;
+    }
+
+    button:active {
+        border: 2px solid forestgreen;
+        color: black;
+        background-color: lightgoldenrodyellow;
+    }
+
+    .active-circle:active {
+        border: 2px solid forestgreen;
+        color: black;
+        background-color: lightgoldenrodyellow;
+    }
+
+    .label {
+        background-color: forestgreen;
+        height: 6px;
+        width: 120px;
+        margin-bottom: 6px;
+    }
+
+    .block-for-product {
+        width: 150px;
+        height: 210px;
+        border: 2px solid green;
+        border-radius: 8px;
+        margin-bottom: 12px;
+        padding-left: 10px;
+        padding-bottom: 10px;
+        padding-top: 4px;
+        background-color: white;
+        margin-right: 20px;
+        display: flex;
+        justify-content: flex-end;
+        flex-direction: column;
+    }
+
+    .block-for-stat {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .circle {
+        border-radius: 50%;
+        border: 4px solid darkgreen;
+        width: 110px;
+        height: 110px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 46px;
+        background-color: white;
+    }
+
+    .block-for-title {
+        display: flex;
+        padding-top: 10px;
+        padding-left: 20px;
+        width: 138px;
+        position: relative;
+    }
+
+    .titles {
+        width: 230px;
+        margin-bottom: 6px;
+    }
+
+    .block-for-btn {
+        display: flex;
+        justify-content: space-between;
+        width: 138px;
+    }
+
+    .price {
+        position: absolute;
+        right: 16px;
+        top: 10px;
+        font-size: 20px;
+        color: darkgrey;
+    }
+
+    .name {
+        font-size: 22px;
+        align-self: flex-start;
+        width: 138px;
+        height: 50px;
+    }
+
+    .num {
+        font-size: 83px;
+    }
+
+    .signature {
+        height: 25px;
+        width: 100%;
+        background-color: #fff176;
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+    }
+
+    .my-signature {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+
+    .v-info {
+        font-size: 14px;
+        color: red;
+    }
+
+    .dev-info {
+        font-size: 11px;
+    }
+
 }
