--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,23 @@
 body {
     font-family: 'Roboto Condensed', sans-serif;
     background-color: #dcedc8;
+    height: 100%;
+}
+
+html {
+    height: 100%;
 }
 
 @media (max-width: 328px) {
 
     #app {
+        min-height: 100%;
         display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
+        flex-direction: column;
+    }
+
+    .top {
+        flex-grow: 1;
     }
 
     .container {
@@ -31,6 +40,12 @@ body {
         z-index: 1;
     }
 
+    .comp-block {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
     .clr-block {
         height: 96px;
         width: 100%;
@@ -45,7 +60,7 @@ body {
         height: 110px;
         width: 166px;
         position: fixed;
-        top: 186px;
+        top: 100px;
         background-color: white;
         border: 4px solid green;
         border-radius: 8px;
@@ -75,15 +90,18 @@ body {
     button {
         border-radius: 30px;
         height: 30px;
-        width: 50px;
-        font-size: 48px;
+        width: 45px;
         outline: none;
         text-align: center;
         display: flex;
         justify-content: center;
         align-items: center;
-        color: grey;
         border: 2px solid grey;
+    }
+
+    .text-btn {
+        font-size: 14px;
+        color: grey;
     }
 
     button:active {
@@ -93,7 +111,7 @@ body {
     }
 
     .active-circle:active {
-        border: 2px solid forestgreen;
+        border: 4px solid darkgreen;
         color: black;
         background-color: lightgoldenrodyellow;
     }
@@ -132,7 +150,7 @@ body {
 
     .circle {
         border-radius: 20px;
-        border: 2px solid darkgreen;
+        border: 4px solid darkgreen;
         width: 110px;
         height: 45px;
         display: flex;
@@ -140,14 +158,7 @@ body {
         align-items: center;
         font-size: 30px;
         background-color: white;
-    }
-
-    .block-for-title {
-        display: flex;
-        padding-top: 10px;
-        padding-left: 20px;
-        width: 110px;
-        position: relative;
+        margin-bottom: 4px;
     }
 
     .titles {
@@ -161,6 +172,10 @@ body {
         display: flex;
         justify-content: space-between;
         width: 110px;
+    }
+
+    .block-for-title {
+        position: relative;
     }
 
     .price {
@@ -213,9 +228,13 @@ body {
 @media (min-width: 329px) {
 
     #app {
+        min-height: 100%;
         display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
+        flex-direction: column;
+    }
+
+    .top {
+        flex-grow: 1;
     }
 
     .container {
@@ -230,12 +249,18 @@ body {
         display: flex;
         flex-direction: column;
         align-items: center;
-        background-color: red;
+        background-color: white;
         margin-bottom: 6px;
         border-bottom: 1px solid #aed581;
         position: fixed;
         top: 0;
         z-index: 1;
+    }
+
+    .comp-block {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     .clr-block {
@@ -253,7 +278,7 @@ body {
         height: 110px;
         width: 166px;
         position: fixed;
-        top: 186px;
+        top: 100px;
         background-color: white;
         border: 4px solid green;
         border-radius: 8px;
@@ -284,14 +309,19 @@ body {
         border-radius: 30px;
         height: 50px;
         width: 60px;
-        font-size: 54px;
         outline: none;
-        text-align: center;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        color: grey;
         border: 2px solid grey;
+        position: relative;
+    }
+
+    .text-btn {
+        width: 38px;
+        height: 30px;
+        font-size: 29px;
+        color: grey;
+        position: absolute;
+        top: 9px;
+        left: 9px;
     }
 
     button:active {
@@ -301,7 +331,7 @@ body {
     }
 
     .active-circle:active {
-        border: 2px solid forestgreen;
+        border: 4px solid darkgreen;
         color: black;
         background-color: lightgoldenrodyellow;
     }
@@ -348,14 +378,7 @@ body {
         align-items: center;
         font-size: 46px;
         background-color: white;
-    }
-
-    .block-for-title {
-        display: flex;
-        padding-top: 10px;
-        padding-left: 20px;
-        width: 138px;
-        position: relative;
+        margin-bottom: 4px;
     }
 
     .titles {
@@ -369,6 +392,10 @@ body {
         display: flex;
         justify-content: space-between;
         width: 138px;
+    }
+
+    .block-for-title {
+        position: relative;
     }
 
     .price {
@@ -421,27 +448,44 @@ body {
 @media (min-width: 600px) {
 
     #app {
+        min-height: 100%;
         display: flex;
+        flex-direction: column;
+    }
+
+    .top {
+        flex-grow: 1;
     }
 
     .container {
+        padding-left: 130px;
         display: flex;
         flex-wrap: wrap;
         justify-content: flex-start;
     }
 
     header {
-        width: 120px;
+        padding-top: 8px;
+        width: 130px;
         height: 100%;
-        background-color: darkgrey;
+        background-color: white;
         position: fixed;
         left: 0;
         z-index: 1;
+        border-right: 3px solid #aed581;
+    }
+
+    .comp-block {
+        width: 130px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 10px;
     }
 
     .clr-block {
-        width: 120px;
-        height: 100%;
+        position: absolute;
+        left: -999px;
     }
 
     .empty-plan {
@@ -454,7 +498,8 @@ body {
         height: 110px;
         width: 166px;
         position: fixed;
-        top: 186px;
+        top: 10px;
+        left: 150px;
         background-color: white;
         border: 4px solid green;
         border-radius: 8px;
@@ -485,14 +530,19 @@ body {
         border-radius: 30px;
         height: 50px;
         width: 60px;
-        font-size: 54px;
         outline: none;
-        text-align: center;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        color: grey;
         border: 2px solid grey;
+        position: relative;
+    }
+
+    .text-btn {
+        width: 38px;
+        height: 30px;
+        font-size: 29px;
+        color: grey;
+        position: absolute;
+        top: 9px;
+        left: 9px;
     }
 
     button:active {
@@ -502,16 +552,14 @@ body {
     }
 
     .active-circle:active {
-        border: 2px solid forestgreen;
+        border: 4px solid darkgreen;
         color: black;
         background-color: lightgoldenrodyellow;
     }
 
     .label {
-        background-color: forestgreen;
-        height: 6px;
-        width: 120px;
-        margin-bottom: 6px;
+        position: absolute;
+        left: -999px;
     }
 
     .block-for-product {
@@ -531,6 +579,7 @@ body {
     }
 
     .block-for-stat {
+        width: 130px;
         display: flex;
         flex-direction: column;
     }
@@ -545,14 +594,7 @@ body {
         align-items: center;
         font-size: 46px;
         background-color: white;
-    }
-
-    .block-for-title {
-        display: flex;
-        padding-top: 10px;
-        padding-left: 20px;
-        width: 138px;
-        position: relative;
+        margin-bottom: 4px;
     }
 
     .titles {
@@ -564,6 +606,10 @@ body {
         display: flex;
         justify-content: space-between;
         width: 138px;
+    }
+
+    .block-for-title {
+        position: relative;
     }
 
     .price {
@@ -587,19 +633,22 @@ body {
 
     .signature {
         height: 25px;
-        width: 100%;
         background-color: #fff176;
         display: flex;
-        justify-content: center;
+        justify-content: space-around;
         align-items: flex-end;
+        width: 100%;
+
+    }
+
+    .clr-signature{
+        width: 156px;
     }
 
     .my-signature {
-        width: 100%;
         display: flex;
         justify-content: space-between;
-        padding-left: 5px;
-        padding-right: 5px;
+        width: 100%;
     }
 
     .v-info {
