--- a/styles/style.css
+++ b/styles/style.css
@@ -20,6 +20,30 @@ html {
         flex-grow: 1;
     }
 
+    .bus-icon{
+        font-size: 28px;
+        color: green;
+    }
+
+    .business{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        top:84%;
+        right: 3%;
+        width: 60px;
+        z-index: 2;
+        height: 40px;
+        border-radius: 12px;
+        border: 1px solid green;
+        background-color: #fff176;
+    }
+
+    .business:active{
+        background-color: white;
+    }
+
     .container {
         display: flex;
         flex-wrap: wrap;
@@ -28,7 +52,7 @@ html {
 
     header {
         width: 100%;
-        height: 96px;
+        height: 105px;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -38,6 +62,7 @@ html {
         position: fixed;
         top: 0;
         z-index: 1;
+        left: 0;
     }
 
     .comp-block {
@@ -47,13 +72,32 @@ html {
     }
 
     .clr-block {
-        height: 96px;
+        height: 105px;
         width: 100%;
     }
 
     .empty-plan {
         color: red;
         font-size: 11px;
+    }
+
+    .pos-for-rubel{
+        width: 100px;
+        padding-bottom: 5px;
+        height: 50px;
+        display: flex;
+        align-items: flex-end;
+        justify-content: center;
+    }
+
+    .empty-price{
+        color: red;
+        font-size: 22px;
+    }
+
+    .rubel{
+        color: black;
+        font-size: 22px;
     }
 
     .window {
@@ -146,6 +190,31 @@ html {
         justify-content: space-between;
         width: 260px;
         margin-bottom: 6px;
+        position: relative;
+    }
+
+    .fa-pen{
+        color: green;
+        font-size: 19px;
+    }
+
+    .bus-container{
+        width: 260px;
+        display: flex;
+        align-items: flex-end;
+        justify-content: space-around;
+    }
+
+    .block-for-business{
+        position: fixed;
+        display: flex;
+        align-items: flex-end;
+        justify-content: space-around;
+        background-color: white;
+        z-index: 1;
+        width: 100%;
+        height: 83px;
+        top: 6px;
     }
 
     .circle {
@@ -227,6 +296,72 @@ html {
 
 @media (min-width: 329px) {
 
+    .bus-container {
+        display: flex;
+        justify-content: space-between;
+        width: 260px;
+    }
+
+    .block-for-business{
+        position: fixed;
+        display: flex;
+        align-items: flex-end;
+        justify-content: space-around;
+        background-color: white;
+        z-index: 1;
+        width: 100%;
+        height: 146px;
+        top: 6px;
+    }
+
+    .pos-for-rubel{
+        width: 100px;
+        padding-bottom: 5px;
+        height: 50px;
+        display: flex;
+        align-items: flex-end;
+        justify-content: center;
+    }
+
+    .rubel{
+        color: black;
+        font-size: 26px;
+    }
+
+    .empty-price{
+        color: red;
+        font-size: 26px;
+    }
+
+    .fa-pen{
+        color: green;
+        font-size: 22px;
+    }
+
+    .business{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        top:88%;
+        right: 3%;
+        width: 60px;
+        z-index: 2;
+        height: 40px;
+        border-radius: 12px;
+        border: 1px solid green;
+        background-color: #fff176;
+    }
+
+    .business:active{
+        background-color: white;
+    }
+
+    .bus-icon{
+        font-size: 28px;
+        color: green;
+    }
+
     #app {
         min-height: 100%;
         display: flex;
@@ -254,6 +389,7 @@ html {
         border-bottom: 1px solid #aed581;
         position: fixed;
         top: 0;
+        left: 0;
         z-index: 1;
     }
 
@@ -288,6 +424,7 @@ html {
         justify-content: space-around;
         padding-top: 5px;
         padding-bottom: 5px;
+        z-index: 3;
     }
 
     .fa-check-square {
@@ -458,29 +595,40 @@ html {
     }
 
     .container {
-        padding-left: 130px;
+        padding-left: 146px;
         display: flex;
         flex-wrap: wrap;
         justify-content: flex-start;
     }
 
-    header {
+    header,
+    .block-for-business{
         padding-top: 8px;
-        width: 130px;
+        width: 146px;
         height: 100%;
         background-color: white;
         position: fixed;
         left: 0;
         z-index: 1;
         border-right: 3px solid #aed581;
+        display: flex;
+        align-items: flex-start;
     }
 
-    .comp-block {
-        width: 130px;
+    .bus-container{
         display: flex;
+        flex-direction: column-reverse;
+        height: 200px;
+        padding-left: 10px;
+    }
+
+    .comp-block,
+    .bus-block{
+        width: 146px;
+        display: flex;
+
         flex-direction: column;
         align-items: center;
-        margin-bottom: 10px;
     }
 
     .clr-block {
@@ -492,6 +640,25 @@ html {
         color: red;
         font-size: 20px;
         padding-left: 20px;
+    }
+
+    .business {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+        top: 5px;
+        right: 5px;
+        width: 36px;
+        z-index: 2;
+        height: 50px;
+        border-radius: 12px;
+        border: 1px solid green;
+        background-color: #fff176;
+    }
+
+    .business:active {
+        background-color: white;
     }
 
     .window {
@@ -597,6 +764,22 @@ html {
         margin-bottom: 4px;
     }
 
+    .bus-block {
+        width: 134px;
+        height: 60px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 46px;
+        background-color: white;
+        margin-bottom: 4px;
+        margin-top: 20px;
+    }
+
+    .title-bus{
+        font-size: 16px;
+    }
+
     .titles {
         width: 230px;
         margin-bottom: 6px;
@@ -639,6 +822,20 @@ html {
         align-items: flex-end;
         width: 100%;
 
+    }
+
+    .pos-for-rubel {
+        width: 130px;
+        padding-bottom: 5px;
+        height: 50px;
+        display: flex;
+        align-items: flex-end;
+        justify-content: center;
+    }
+
+    .rubel{
+        color: black;
+        font-size: 24px;
     }
 
     .clr-signature{
