--- a/styles/style.css
+++ b/styles/style.css
@@ -281,7 +281,7 @@ html {
         z-index: 1;
         width: 100%;
         height: 83px;
-        top: 3px;
+        top: 6px;
     }
 
     .circle {
@@ -524,6 +524,11 @@ html {
 
     .textbtndark {
         color: black;
+    }
+
+    .title-bus{
+        text-align: center;
+        margin-left: 5px;
     }
 
 }
@@ -1161,7 +1166,7 @@ html {
         align-items: center;
         position: fixed;
         top: 5px;
-        left: 97%;
+        left: 93.6%;
         width: 36px;
         z-index: 2;
         height: 50px;
@@ -1185,7 +1190,7 @@ html {
 
     .black-btn {
         position: fixed;
-        left: 97%;
+        left: 93.6%;
         display: flex;
         justify-content: center;
         align-items: center;
